cart page minus button overlap fixed #47

--- a/scss/cart/cart.scss
+++ b/scss/cart/cart.scss
@@ -14,8 +14,13 @@ hr {
     width: 85%;
 }
 
-.product-item {
-    max-width: 100%;
+.product-price {
+    max-width: 30%;
+
+    .total-price {
+        margin-right: 0;
+    }
+
     @media screen and (min-width: 768px) {
         width: 25%;
     }
